--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+html, body, #app {
+    @apply text-[#2e2e2e] w-screen h-screen w-full h-full;
+}
+
+html, body, #app {
+    min-width: 100vw;
+}
